# textscreen-sdl2

./: CMakeLists.txt
src/: CMakeLists.txt  textscreen.h  txt_sdl2.c
src/examples/: guitest.c
